--- a/index.html
+++ b/index.html
@@ -87,10 +87,6 @@ Credentials discoverable that belong to a DID or to a DNS name.</p>
 credential. While this data exchange is important for VCs that shall be kept private, Holders might desire to make other
 VCs public. For public VCs the required data exchange increases the complexity of applications that want to discover and
 access these VCs because the application would need to implement a data exchange protocol.</p>
-<h2 id="proposed-work-item"><a class="toc-anchor" href="#proposed-work-item" >§</a> Proposed work item</h2>
-<p>This proposal proposes to create a specification for linking Verifiable Credentials to a DID via the
-<a path-0="w3c.github.io"path-1="did-core"path-2="#services"href="https://w3c.github.io/did-core/#services" >services section in the DID Document</a>.</p>
-<p>The goal of this specification is to simplify discovery and retrieval of published Verifiable Credentials.</p>
 <h2 id="potential-use-cases"><a class="toc-anchor" href="#potential-use-cases" >§</a> Potential Use Cases</h2>
 <ul>
 <li>Linking an official business registration credential (if there was such a thing) to a DNS name to reduce the burden of
@@ -102,9 +98,10 @@ it to the DID of the website to reduce the burden of vistors to extract relevant
 <p>Verifiable Credentials are designed to be shared between entities. How this is done via private communication channels
 is specified by protocols like <a href="#ref:DIDCOMM-MESSAGING" >DIDComm</a> and
 <a href="#ref:OPENID-4-VERIFIABLE-CREDENTIAL-ISSUANCE" >OIDC4VC</a>. This document complements the private communication channel by
-defining how to share Verifiable Credentials publicly via a serivce entry in a “DID Document”.</p>
+defining how to share, discover and retrieve Verifiable Credentials publicly via a service entry in a “DID Document”.</p>
 <p>The Verifiable Credentials specification supports multiple different identifiers. This specification does NOT specify
-how to publish Verifiable Credentials for other valid identifiers apart from DIDs.</p>
+how to publish Verifiable Credentials for other valid identifiers apart from DIDs. Furthermore, this specification does
+NOT specify how Verifiable Credentials are created, modified or deleted at a service endpoint.</p>
 <h2 id="status-of-this-document"><a class="toc-anchor" href="#status-of-this-document" >§</a> Status of This Document</h2>
 <p>Linked Verifiable Presentations is a draft specification under development within the
 <a path-0="identity.foundation"href="https://identity.foundation" >Decentralized Identity Foundation</a> (DIF), and designed to incorporate the requirements and
@@ -134,7 +131,11 @@ on GitHub (see above) and other mediums (e.g. DIF) where this work is being done
 </tr>
 <tr>
 <td style="text-align:left">Verifiable Credential</td>
-<td style="text-align:left">A … [<a class="spec-reference" href="#ref:VC-DATA-MODEL">VC-DATA-MODEL</a>]</td>
+<td style="text-align:left">A cryptographically secure mechanism for expressing credentials like driver’s licenses on the web. It is defined by [<a class="spec-reference" href="#ref:VC-DATA-MODEL">VC-DATA-MODEL</a>].</td>
+</tr>
+<tr>
+<td style="text-align:left">Verifiable Presentation</td>
+<td style="text-align:left">A way to combine and present credentials. It is defined by [<a class="spec-reference" href="#ref:VC-DATA-MODEL">VC-DATA-MODEL</a>].</td>
 </tr>
 </tbody>
 </table>
@@ -280,7 +281,6 @@ the <code>/.well-known/did-configuration.json</code> path.</li>
                       <div id="toc_list">
                         <ul class="toc">
 <li><a href="#motivation" >Motivation</a></li>
-<li><a href="#proposed-work-item" >Proposed work item</a></li>
 <li><a href="#potential-use-cases" >Potential Use Cases</a></li>
 <li><a href="#abstract" >Abstract</a></li>
 <li><a href="#status-of-this-document" >Status of This Document</a></li>
