chore: update index.html

--- a/index.html
+++ b/index.html
@@ -78,37 +78,33 @@ customElements.define("slide-panels",class extends HTMLElement{static get observ
 </dd>
 </dl>
 <hr>
-<h2 id="motivation"><a class="toc-anchor" href="#motivation" >§</a> Motivation</h2>
-<p>Currently, there are multiple specifications for discovering DIDs that are accosiated with DNS names, see
-<a href="#references" >references</a>. However, there’s currently no specification that makes Verifiable Presentations and
-Credentials discoverable that belong to a DID or to a DNS name.</p>
-<p>Currently, the only way an application or web service can access VCs of a DID is to use a data exchange protocol like
-<a path-0="openid.net"path-1="openid4vc"path-2=""href="https://openid.net/openid4vc/" >OpenID4VC</a> or <a path-0="didcomm.org"path-1=""href="https://didcomm.org/" >DIDComm</a> to request and receive the desired
-credential. While this data exchange is important for VCs that shall be kept private, <a path-0="www.w3.org"path-1="TR"path-2="vc-data-model-1.1"path-3="#dfn-holders"href="https://www.w3.org/TR/vc-data-model-1.1/#dfn-holders" >Holders</a> might desire to
-make other VCs public. For public VCs the required data exchange increases the complexity of applications that want to
-discover and access these VCs because the application would need to implement a data exchange protocol.</p>
-<h2 id="potential-use-cases"><a class="toc-anchor" href="#potential-use-cases" >§</a> Potential Use Cases</h2>
-<ul>
-<li>Linking an official business registration credential (if there was such a thing) to a DNS name to reduce the burden of
-verifying the authenticity of a website.</li>
-<li>Making the mandatory imprint page on a website machine-readable by self-issuing an imprint credential and connecting
-it to the DID of the website to reduce the burden of vistors to extract relevant data from the imprint page.</li>
-<li>for whom is this useful
-<ul>
-<li>public entities</li>
-<li>long-lived identifiers</li>
-</ul>
-</li>
-<li>public proof ownership over a domain name - Well-known DID Configuration + published credential</li>
-</ul>
 <h2 id="abstract"><a class="toc-anchor" href="#abstract" >§</a> Abstract</h2>
 <p>Verifiable Credentials are designed to be shared between entities. How this is done via private communication channels
-is specified by protocols like <a href="#ref:DIDCOMM-MESSAGING" >DIDComm</a> and
-<a href="#ref:OPENID-4-VERIFIABLE-CREDENTIAL-ISSUANCE" >OIDC4VC</a>. This document complements the private communication channel by
-defining how to share, discover and retrieve Verifiable Credentials publicly via a service entry in a “DID Document”.</p>
+is specified by protocols like <a href="#ref:DIDCOMM-MESSAGING" >[DIDComm]</a> and
+<a href="#ref:OPENID-4-VERIFIABLE-CREDENTIAL-ISSUANCE" >[OIDC4VC]</a>. This document complements the private communication channel
+by defining how to share, discover and retrieve Verifiable Credentials publicly via a service entry in a “DID Document”.</p>
 <p>The Verifiable Credentials specification supports multiple different identifiers. This specification does NOT specify
 how to publish Verifiable Credentials for other valid identifiers apart from DIDs. Furthermore, this specification does
 NOT specify how Verifiable Credentials are created, modified or deleted at a service endpoint.</p>
+<h3 id="use-cases"><a class="toc-anchor" href="#use-cases" >§</a> Use Cases</h3>
+<p><em>This section is non-normative.</em></p>
+<p>The contributors to this specification provided the following incomplete list of use cases that appeal to them:</p>
+<ul>
+<li>Public bidirectional linkage between a DNS origin and a DID as defined by
+<a href="#ref:DID-CONFIGURATION" >[DID-CONFIGURATION]</a>.</li>
+<li>Provide publicly verifiable information about DIDs used by companies to simplify the onboarding process of suppliers
+and customers. Example credentials:
+<ul>
+<li>Business registration credential that contains name, address and line of business.</li>
+<li>Attestation of compliance with the ISO 27001 standard issued by a certification organization.</li>
+</ul>
+</li>
+<li>Verifiable and machine-readable credential of the mandatory imprint page for company websites.</li>
+<li>Decentralized business network of people who publicly verifiably share their educational background and work
+experience.</li>
+<li>Replicate functionality of X.509 certificates that contain information about the issuers and holders with DIDs and
+Verifiable Credentials.</li>
+</ul>
 <h2 id="status-of-this-document"><a class="toc-anchor" href="#status-of-this-document" >§</a> Status of This Document</h2>
 <p>Linked Verifiable Presentations is a draft specification under development within the
 <a path-0="identity.foundation"href="https://identity.foundation" >Decentralized Identity Foundation</a> (DIF), and designed to incorporate the requirements and
@@ -358,6 +354,11 @@ MUST comply with relevant normative statements in that section.</p>
 </p>
 <h3 id="informative-references"><a class="toc-anchor" href="#informative-references" >§</a> Informative References</h3>
 <dl>
+  <dt id="ref:DID-CONFIGURATION">DID-CONFIGURATION</dt>
+  <dd>
+    <cite><a href="https://identity.foundation/.well-known/resources/did-configuration/">Well Known DID Configuration</a></cite>.
+        Daniel Buchner; Orie Steele; Tobias Looker; 2023. <span class="reference-status">Status: Working Group Approved.</span>
+  </dd>
   <dt id="ref:DIDCOMM-MESSAGING">DIDCOMM-MESSAGING</dt>
   <dd>
     <cite><a href="https://identity.foundation/didcomm-messaging/spec/">DIDComm Messaging</a></cite>.
@@ -403,47 +404,10 @@ MUST comply with relevant normative statements in that section.</p>
 </p>
 <h2 id="acknowledgements"><a class="toc-anchor" href="#acknowledgements" >§</a> Acknowledgements</h2>
 <h2 id="appendix"><a class="toc-anchor" href="#appendix" >§</a> Appendix</h2>
-<h3 id="other-resources"><a class="toc-anchor" href="#other-resources" >§</a> Other Resources</h3>
-<p>The following projects are working on Linked Verifiable Presentations and Credentials.</p>
+<h3 id="simliar-specifications"><a class="toc-anchor" href="#simliar-specifications" >§</a> Simliar Specifications</h3>
+<p>The following specification are providing similar functionality:</p>
 <ul>
 <li><a path-0="w3c.github.io"path-1="did-spec-registries"path-2="#credentialregistry"href="https://w3c.github.io/did-spec-registries/#credentialregistry" >CredentialRegistry</a></li>
-</ul>
-<h3 id="other-work-to-consider"><a class="toc-anchor" href="#other-work-to-consider" >§</a> Other work to consider</h3>
-<ul>
-<li>The
-<a path-0="trustoverip.github.io"path-1="tswg-did-method-webs-specification"path-2="index.html#signed-files"href="https://trustoverip.github.io/tswg-did-method-webs-specification/index.html#signed-files" >did:webs Method Specification</a>
-defines how the DID URL path is to be used for resolving signed files in general, and files of VCs and VPs in
-particular. Notably:
-<ul>
-<li>A DID URL of the form <code>&lt;did&gt;/path/to/file</code> resolves to a file, and MUST have beside it a <code>&lt;did&gt;/path/to/file.jws</code> a
-JWS of the hash of the file signed by the controlling DID.</li>
-<li>This approach is extremely easy with a web-based DID Method (transform the DID into an HTTPS URL and <code>GET</code>), but can
-be used by any DID Method.</li>
-<li>Using the DID URL <code>whois</code> path MAY return a Verifiable Presentation that contains an array of Verifiable Credentials
-all of which must have the DID as the credential subject. The Verifiable Presentation proof is signed by DID.</li>
-</ul>
-</li>
-<li><a path-0="w3c.github.io"path-1="did-spec-registries"path-2="#service-types"href="https://w3c.github.io/did-spec-registries/#service-types" >DID Specification Registries - Service types</a></li>
-<li>The <a path-0="w3c.github.io"path-1="did-spec-registries"path-2="#credentialregistry"href="https://w3c.github.io/did-spec-registries/#credentialregistry" >Service type - CredentialRegistry</a> specification
-provides a similar use case. They’re focused on Verifiable Credentials that are issued by a third party. This
-proposal’s focus on Verifiable Presentations would allow the <a path-0="www.w3.org"path-1="TR"path-2="vc-data-model-1.1"path-3="#dfn-holders"href="https://www.w3.org/TR/vc-data-model-1.1/#dfn-holders" >holder</a> to have more control over the published
-credential by signing the presentation and potentially limiting it to a certain domain name, etc.</li>
-<li>X.509 certificates contain information about the issuing and holding party. With this proposal a DID + VC could
-provide the same functionality.</li>
-<li><a path-0="github.com"path-1="identinet"path-2="identinet-plugin"href="https://github.com/identinet/identinet-plugin" >identinet-plugin</a> is a browser add-on that demonstrates how Well Known
-DID and VC data can be leveraged for the end user.</li>
-<li>Verifiable Credentials are independent of DIDs, therefore it should be considered to make the DID linking aspect
-optional / make the specification useful even if no DID is used.</li>
-</ul>
-<h3 id="other-references"><a class="toc-anchor" href="#other-references" >§</a> Other References</h3>
-<ul>
-<li><a path-0="datatracker.ietf.org"path-1="doc"path-2="draft-mayrhofer-did-dns"path-3=""href="https://datatracker.ietf.org/doc/draft-mayrhofer-did-dns/" >The Decentralized Identifier (DID) in the DNS</a> specifies
-the use of the URI Resource Record Type to publish Decentralized Identifiers (DIDs) in the Domain Name System.</li>
-<li>The <a path-0="w3c-ccg.github.io"path-1="did-method-web"path-2=""href="https://w3c-ccg.github.io/did-method-web/" >did:web Method Specification</a> defines how to discover a did:web DID
-for a DNS name (unidirectional) via the <code>/.well-known/did.json</code> path.</li>
-<li>The <a path-0="identity.foundation"path-1=".well-known"path-2="resources"path-3="did-configuration"path-4=""href="https://identity.foundation/.well-known/resources/did-configuration/" >Well Known DID Configuration</a> specification
-defines how to create a bidirectional relationship between a DID, independent of the DID method, and a DNS name via
-the <code>/.well-known/did-configuration.json</code> path.</li>
 </ul>
 
                     </article>    
@@ -469,9 +433,11 @@ the <code>/.well-known/did-configuration.json</code> path.</li>
                       </header>
                       <div id="toc_list">
                         <ul class="toc">
-<li><a href="#motivation" >Motivation</a></li>
-<li><a href="#potential-use-cases" >Potential Use Cases</a></li>
-<li><a href="#abstract" >Abstract</a></li>
+<li><a href="#abstract" >Abstract</a>
+<ul>
+<li><a href="#use-cases" >Use Cases</a></li>
+</ul>
+</li>
 <li><a href="#status-of-this-document" >Status of This Document</a></li>
 <li><a href="#terminology" >Terminology</a></li>
 <li><a href="#linked-verifiable-presentation-service-endpoint" >Linked Verifiable Presentation Service Endpoint</a>
@@ -505,9 +471,7 @@ the <code>/.well-known/did-configuration.json</code> path.</li>
 <li><a href="#acknowledgements" >Acknowledgements</a></li>
 <li><a href="#appendix" >Appendix</a>
 <ul>
-<li><a href="#other-resources" >Other Resources</a></li>
-<li><a href="#other-work-to-consider" >Other work to consider</a></li>
-<li><a href="#other-references" >Other References</a></li>
+<li><a href="#simliar-specifications" >Simliar Specifications</a></li>
 </ul>
 </li>
 </ul>
