--- a/index.html
+++ b/index.html
@@ -98,20 +98,21 @@ NOT specify how Verifiable Credentials are created, modified or deleted at a ser
 <p><em>This section is non-normative.</em></p>
 <p>The contributors to this specification provided the following incomplete list of use cases that appeal to them:</p>
 <ul>
-<li>Public bidirectional linkage between a DNS origin and a DID as defined by
-<a href="#ref:DID-CONFIGURATION" >[DID-CONFIGURATION]</a>.</li>
-<li>Provide publicly verifiable information about DIDs used by companies to simplify the onboarding process of suppliers
-and customers. Example credentials:
+<li>Discover verifiable data about a website by linking a DID to a DNS name, e.g. via
+<a href="#ref:DID-CONFIGURATION" >[DID-CONFIGURATION]</a>, and referencing verifiable presentations and credentials from the DID
+via this specification.</li>
+<li>Simplify the onboarding of suppliers and customers by linking relevant and non-sensitive data to the organization’s
+DID. Example credentials:
 <ul>
 <li>Business registration credential that contains name, address and line of business.</li>
-<li>Attestation of compliance with the ISO 27001 standard issued by a certification organization.</li>
+<li>Attestation of compliance with the ISO 27001 standard.</li>
 </ul>
 </li>
-<li>Verifiable and machine-readable credential of the mandatory imprint page for company websites.</li>
-<li>Decentralized business network of people who publicly verifiably share their educational background and work
-experience.</li>
-<li>Replicate functionality of X.509 certificates that contain information about the issuers and holders with DIDs and
-Verifiable Credentials.</li>
+<li>Make mandatory data verifiable: provide imprint pages or terms of use statements as machine-readable, verifiable
+credentials that are issued by and linked to the organization’s DID.</li>
+<li>Decentralized business network: people share their educational background and work experience as verifiable
+credentials publicly.</li>
+<li>Replicate X.509 certificates with DIDs and linked verifiable presentations and credentials.</li>
 </ul>
 <h2 id="status-of-this-document"><a class="toc-anchor" href="#status-of-this-document" >§</a> Status of This Document</h2>
 <p>Linked Verifiable Presentation is a draft specification under development within the
