--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@ customElements.define("slide-panels",class extends HTMLElement{static get observ
 <p>Verifiable Credentials are designed to be shared between entities. How this is done via private communication channels
 is specified by protocols like <a href="#ref:DIDCOMM-MESSAGING" >[DIDComm]</a> and
 <a href="#ref:OPENID-4-VERIFIABLE-CREDENTIAL-ISSUANCE" >[OIDC4VC]</a>. This document complements the private communication channel
-by defining how to share, discover and retrieve Verifiable Credentials publicly via a service entry in a “DID Document”.</p>
+by defining how to share, discover and retrieve Verifiable Credentials publicly via a service entry in a “DID Document”.
+It is worth noting that incorporating private presentations should be relied on more frequently for enhanced privacy
+and security, rather than solely depending on public methods.</p>
 <p>The Verifiable Credentials specification supports multiple different identifiers. This specification does NOT specify
 how to publish Verifiable Credentials for other valid identifiers apart from DIDs. Furthermore, this specification does
 NOT specify how Verifiable Credentials are created, modified or deleted at a service endpoint.</p>
