feat: add acknowledgements

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ customElements.define("slide-panels",class extends HTMLElement{static get observ
 is specified by protocols like <a href="#ref:DIDCOMM-MESSAGING" >[DIDComm]</a> and
 <a href="#ref:OPENID-4-VERIFIABLE-CREDENTIAL-ISSUANCE" >[OIDC4VC]</a>. This document complements the private communication channel
 by defining how to share, discover and retrieve Verifiable Credentials publicly via a service entry in a “DID Document”.
-It is worth noting that incorporating private presentations should be relied on more frequently for enhanced privacy
-and security, rather than solely depending on public methods.</p>
+It is worth noting that incorporating private presentations should be relied on more frequently for enhanced privacy and
+security, rather than solely depending on public methods.</p>
 <p>The Verifiable Credentials specification supports multiple different identifiers. This specification does NOT specify
 how to publish Verifiable Credentials for other valid identifiers apart from DIDs. Furthermore, this specification does
 NOT specify how Verifiable Credentials are created, modified or deleted at a service endpoint.</p>
@@ -536,6 +536,8 @@ MUST comply with relevant normative statements in that section.</p>
 </dl>
 </p>
 <h2 id="acknowledgements"><a class="toc-anchor" href="#acknowledgements" >§</a> Acknowledgements</h2>
+<p>We thank the Decentralized Identity Foundation and the Identity and Discovery working group for their support in this
+specification.</p>
 <h2 id="appendix"><a class="toc-anchor" href="#appendix" >§</a> Appendix</h2>
 <h3 id="simliar-specifications"><a class="toc-anchor" href="#simliar-specifications" >§</a> Simliar Specifications</h3>
 <p>The following specification are providing similar functionality:</p>
