chore: bump version to 0.3.0

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ customElements.define("slide-panels",class extends HTMLElement{static get observ
                     </header>
       
                     <article id="content">
-                      <h1 id="linked-verifiable-presentation-v020"><a class="toc-anchor" href="#linked-verifiable-presentation-v020" >§</a> Linked Verifiable Presentation v0.2.0</h1>
+                      <h1 id="linked-verifiable-presentation-v030"><a class="toc-anchor" href="#linked-verifiable-presentation-v030" >§</a> Linked Verifiable Presentation v0.3.0</h1>
 <p><strong>Specification Status:</strong> <a path-0="github.com"path-1="decentralized-identity"path-2="org"path-3="blob"path-4="master"path-5="work-item-lifecycle.md"href="https://github.com/decentralized-identity/org/blob/master/work-item-lifecycle.md" >Draft</a></p>
 <p><strong>Latest Draft:</strong> <a path-0="identity.foundation"path-1="linked-vp"href="https://identity.foundation/linked-vp" >identity.foundation/linked-vp</a></p>
 <dl>
@@ -439,17 +439,7 @@ credential to establish whether the credential applies to the <a path-0="www.w3.
 specification are non-normative. Everything else in this specification is normative.</p>
 <p>The keywords MAY, MUST, MUST NOT, and SHOULD in this document are to be interpreted as described in BCP 14
 [<a class="spec-reference" href="#ref:RFC2119">RFC2119</a>] [<a class="spec-reference" href="#ref:RFC8174">RFC8174</a>] when, and only when, they appear in all capitals, as shown here.</p>
-<p>This document contains examples that contain JSON and JSON-LD content. Some of these examples contain characters that
-are invalid, such as inline comments (//) and the use of ellipsis (…) to denote information that adds little value to
-the example. Implementers are cautioned to remove this content if they desire to use the information as valid JSON, or
-JSON-LD.</p>
-<p>A DID Configuration URI is any concrete expression of the rules specified in Section DID Configuration URI and MUST
-comply with relevant normative statements in that section.</p>
-<p>A DID Configuration Resource is any concrete expression of the rules specified in Section DID Configuration Resource and
-MUST comply with relevant normative statements in that section.</p>
-<p>A Domain Linkage Credential is any concrete expression of the rules specified in Section Domain Linkage Credential and
-MUST comply with relevant normative statements in that section.</p>
-<p>Implementations MUST comply with relevant normative statements in DID Configuration Resource Verification</p>
+<p>Implementations MUST comply with relevant normative statements in DID Configuration Resource Verification.</p>
 <h2 id="references"><a class="toc-anchor" href="#references" >§</a> References</h2>
 <h3 id="normative-references"><a class="toc-anchor" href="#normative-references" >§</a> Normative References</h3>
 <p>
