chore: update index.html

--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@ customElements.define("slide-panels",class extends HTMLElement{static get observ
                     </header>
       
                     <article id="content">
-                      <h1 id="linked-verifiable-presentation-v030"><a class="toc-anchor" href="#linked-verifiable-presentation-v030" >§</a> Linked Verifiable Presentation v0.3.0</h1>
-<p><strong>Specification Status:</strong> <a path-0="github.com"path-1="decentralized-identity"path-2="org"path-3="blob"path-4="master"path-5="work-item-lifecycle.md"href="https://github.com/decentralized-identity/org/blob/master/work-item-lifecycle.md" >Draft</a></p>
+                      <h1 id="linked-verifiable-presentation-v040"><a class="toc-anchor" href="#linked-verifiable-presentation-v040" >§</a> Linked Verifiable Presentation v0.4.0</h1>
+<p><strong>Specification Status:</strong>
+<a path-0="github.com"path-1="decentralized-identity"path-2="org"path-3="blob"path-4="master"path-5="work-item-lifecycle.md"href="https://github.com/decentralized-identity/org/blob/master/work-item-lifecycle.md" >Working Group Approved</a></p>
 <p><strong>Latest Draft:</strong> <a path-0="identity.foundation"path-1="linked-vp"href="https://identity.foundation/linked-vp" >identity.foundation/linked-vp</a></p>
 <dl>
 <dt><strong>Editors:</strong></dt>
