chore: add Jan Christoph Ebersbach as spec author

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@ customElements.define("slide-panels",class extends HTMLElement{static get observ
 <dl>
 <dt><strong>Authors:</strong></dt>
 <dd>
+<p><a path-0="www.linkedin.com"path-1="in"path-2="JCEbersbach"href="https://www.linkedin.com/in/JCEbersbach" >Jan Christoph Ebersbach</a> (identinet)</p>
+</dd>
+<dd>
 <p><a path-0="www.linkedin.com"path-1="in"path-2="brianrichter3"href="https://www.linkedin.com/in/brianrichter3" >Brian Richter</a> (Aviary Tech)</p>
 </dd>
 <dd>
