Remove "Others?" entry in Editors and Authors

--- a/index.html
+++ b/index.html
@@ -53,12 +53,7 @@ customElements.define("slide-panels",class extends HTMLElement{static get observ
 <p><strong>Latest Draft:</strong> <a path-0="identity.foundation"path-1="linked-vp"href="https://identity.foundation/linked-vp" >identity.foundation/linked-vp</a></p>
 <dl>
 <dt><strong>Editors:</strong></dt>
-<dd>
-<p><a path-0="www.linkedin.com"path-1="in"path-2="JCEbersbach"href="https://www.linkedin.com/in/JCEbersbach" >Jan Christoph Ebersbach</a> (identinet)</p>
-</dd>
-<dd>
-<p>Others?</p>
-</dd>
+<dd><a path-0="www.linkedin.com"path-1="in"path-2="JCEbersbach"href="https://www.linkedin.com/in/JCEbersbach" >Jan Christoph Ebersbach</a> (identinet)</dd>
 </dl>
 <!-- -->
 <dl>
@@ -71,9 +66,6 @@ customElements.define("slide-panels",class extends HTMLElement{static get observ
 </dd>
 <dd>
 <p><a path-0="www.linkedin.com"path-1="in"path-2="markus-sabadello-353a0821"href="https://www.linkedin.com/in/markus-sabadello-353a0821" >Markus Sabadello</a> (Danube Tech)</p>
-</dd>
-<dd>
-<p>Others?</p>
 </dd>
 </dl>
 <!-- -->
